Поправил тесты на CRUD